bugherd-270: specify a width of 13 characters so the gauge text mark doesn't overlap each other

--- a/assembl/static2/css/components/rc-slider.scss
+++ b/assembl/static2/css/components/rc-slider.scss
@@ -81,6 +81,7 @@
   color: #999;
   overflow: hidden;
   word-wrap: break-word;
+  width: 13ex;
 }
 
 .rc-slider-mark-text-active {
